--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,7 +42,7 @@ hapi:
 ### alternatively, it may be set using the X-Forwarded-Proto header.
 #   use_apache_address_strategy_https: false
 ### enable to set the Server URL
-#    server_address: http://hapi.fhir.org/baseR4
+    server_address:   'https://davinci-pct-payer.logicahealth.org' #'http://localhost:8080'
 #    defer_indexing_for_codesystems_of_size: 101
 #    implementationguides:
 ###    example from registry (packages.fhir.org)
@@ -59,7 +59,7 @@ hapi:
 #      - Observation
 #    allow_cascading_deletes: true
 #    allow_contains_searches: true
-#    allow_external_references: true
+    allow_external_references: true
 #    allow_multiple_delete: true
 #    allow_override_default_search_params: true
 #    auto_create_placeholder_reference_targets: false
@@ -110,7 +110,7 @@ hapi:
     tester:
         home:
           name: Local Tester
-          server_address: 'http://localhost:8080/fhir'
+          server_address: 'http://localhost:8080/fhir' #'https://davinci-pct-payer.logicahealth.org/fhir'
           refuse_to_fetch_third_party_urls: false
           fhir_version: R4
         global:
