--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>3.0.11.RELEASE</version>
+        </dependency>
 
         <!-- Needed for parsing the config -->
         <dependency>
