--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -110,7 +110,7 @@ hapi:
     tester:
         home:
           name: Local Tester
-          server_address: 'https://davinci-pct-payer.logicahealth.org/fhir' #'http://localhost:8080/fhir' #
+          server_address: 'http://localhost:8080/fhir' #
           refuse_to_fetch_third_party_urls: false
           fhir_version: R4
         global:
