--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,7 +42,7 @@ hapi:
 ### alternatively, it may be set using the X-Forwarded-Proto header.
 #   use_apache_address_strategy_https: false
 ### enable to set the Server URL
-    server_address:   'http://localhost:8080' #'https://davinci-pct-payer.logicahealth.org' #
+    server_address:   'https://davinci-pct-payer.logicahealth.org' #'https://davinci-pct-payer.logicahealth.org' # 'http://localhost:8080'
 #    defer_indexing_for_codesystems_of_size: 101
 #    implementationguides:
 ###    example from registry (packages.fhir.org)
