--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,7 +60,7 @@ hapi:
         name: hl7.fhir.us.davinci-hrex
         version: 1.0.0
       pct:
-        url: https://build.fhir.org/ig/HL7/davinci-pct/package.tgz
+        # url: https://build.fhir.org/ig/HL7/davinci-pct/package.tgz
         name: hl7.fhir.us.davinci-pct
         version: 1.0.0
 ###    example from registry (packages.fhir.org)
