--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -72,6 +72,7 @@ hapi:
 #        url: https://build.fhir.org/ig/HL7/fhir-ips/package.tgz
 #        name: hl7.fhir.uv.ips
 #        version: 1.0.0
+    allowed_bundle_types: COLLECTION,DOCUMENT,MESSAGE,TRANSACTION,TRANSACTIONRESPONSE,BATCH,BATCHRESPONSE,HISTORY,SEARCHSET
 #    supported_resource_types:
 #      - Patient
 #      - Observation
