--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,9 @@
-version: "3"
+version: '3'
 services:
-  test-pct-payer:
+  app:
     build: .
-    container_name: test-pct-payer
+    container_name: fhir-server
     restart: on-failure
     ports:
-      - "8081:8080"
-  hapi-fhir-mysql:
-    image: mysql:latest
-    container_name: hapi-fhir-mysql
-    #https://dev.mysql.com/doc/refman/8.0/en/identifier-case-sensitivity.html
-    command: --lower_case_table_names=1
-    restart: always
-    environment:
-      MYSQL_DATABASE: 'hapi'
-      MYSQL_USER: 'admin'
-      MYSQL_PASSWORD: 'admin'
-      MYSQL_ROOT_PASSWORD: 'admin'
-    volumes:
-      - hapi-fhir-mysql:/var/lib/mysql
-volumes:
-  hapi-fhir-mysql:
+      - 8083:8083
+      
