--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ davincipct:
       installMode: STORE_AND_INSTALL
       packageUrl: https://build.fhir.org/ig/HL7/davinci-pct/package.tgz
       name: hl7.fhir.us.davinci-pct
-      version: 2.0.0-draft
+      version: 2.0.0
       fetchDependencies: false
       reloadExisting: false
     uscore:
